Upgrade Maven libraries to latest for Java 14 and Maven 3.6.3